--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "bulma": "^0.7.5",
     "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
-    "moment": "^2.24.0",
     "vue": "^2.6.10",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.1.1"
   },
